# clientTCP

./: .gitignore  CMakeLists.txt  README.md
include/: gui.h  inetgui.h  netcommon.cpp  netcommon.h  packets.h  pckg.h  tcpclient.h
src/: gui.cpp  inetgui.cpp  main.cpp  tcpclient.cpp
